src/examples/fail/double_variable.c
int a;
int a;	//Error

return a;
